--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@types/react-dom": "^16.8.3",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.12",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "react-app-rewired": "^1.6.2",
+    "ts-import-plugin": "^1.5.5",
     "typescript": "^3.4.2"
   }
 }
