--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "@types/react-redux": "^7.0.6",
-    "antd": "^3.16.2",
+    "antd-mobile": "^2.2.11",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
@@ -23,11 +24,14 @@
     "@types/node": "^11.13.2",
     "@types/react": "^16.8.11",
     "@types/react-dom": "^16.8.3",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.1",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.12",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "react-app-rewired": "^1.6.2",
+    "react-router-dom": "^5.0.0",
     "ts-import-plugin": "^1.5.5",
     "typescript": "^3.4.2"
   }
