--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,12 @@
     "importHelpers": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": [
     "node_modules",
+    "node_modules/antd-mobile",
     "build",
     "scripts",
     "acceptance-tests",
